--- a/.drone.yml
+++ b/.drone.yml
@@ -204,7 +204,7 @@ steps:
       - ./gradlew createGplayDebugCoverageReport -Pcoverage -Pandroid.testInstrumentationRunnerArguments.notAnnotation=com.owncloud.android.utils.ScreenshotTest || scripts/uploadReport.sh $LOG_USERNAME $LOG_PASSWORD $DRONE_BUILD_NUMBER "oldest-stable" "IT" $DRONE_PULL_REQUEST
 
 services:
-  - name: server-oldest-stable
+  - name: server
     image: nextcloudci/server:server-13
     environment:
       EVAL: true
@@ -223,7 +223,7 @@ services:
       - su www-data -c "php /var/www/html/occ group:adduser users user2"
       - su www-data -c "git clone -b stable16 https://github.com/nextcloud/activity.git /var/www/html/apps/activity/"
       - su www-data -c "php /var/www/html/occ app:enable activity"
-      - su www-data -c "git clone -b master https://github.com/nextcloud/text.git /var/www/html/apps/text/"
+      - su www-data -c "git clone -b stable16 https://github.com/nextcloud/text.git /var/www/html/apps/text/"
       - su www-data -c "php /var/www/html/occ app:enable text"
       - su www-data -c "git clone -b stable16 https://github.com/nextcloud/end_to_end_encryption.git /var/www/html/apps/end_to_end_encryption/"
       - su www-data -c "php /var/www/html/occ app:enable end_to_end_encryption"
