--- a/.drone.yml
+++ b/.drone.yml
@@ -227,7 +227,7 @@ services:
       - su www-data -c "php /var/www/html/occ app:enable text"
       - su www-data -c "git clone -b stable16 https://github.com/nextcloud/end_to_end_encryption.git /var/www/html/apps/end_to_end_encryption/"
       - su www-data -c "php /var/www/html/occ app:enable end_to_end_encryption"
-      - /usr/local/bin/run.sh
+      - /run.sh
 
 trigger:
   branch:
