--- a/.drone.yml
+++ b/.drone.yml
@@ -199,7 +199,7 @@ steps:
       - ./gradlew assembleGplayDebugAndroidTest
       - scripts/wait_for_emulator.sh
       - ./gradlew installGplayDebugAndroidTest
-      - scripts/wait_for_server.sh "server-oldest-stable"
+      - scripts/wait_for_server.sh "server"
       - scripts/deleteOldComments.sh "oldest-table" "IT" $DRONE_PULL_REQUEST
       - ./gradlew createGplayDebugCoverageReport -Pcoverage -Pandroid.testInstrumentationRunnerArguments.notAnnotation=com.owncloud.android.utils.ScreenshotTest || scripts/uploadReport.sh $LOG_USERNAME $LOG_PASSWORD $DRONE_BUILD_NUMBER "oldest-stable" "IT" $DRONE_PULL_REQUEST
 
