--- a/.github/workflows/screenShotTest.yml
+++ b/.github/workflows/screenShotTest.yml
@@ -8,7 +8,7 @@ permissions:
     contents: read
     pull-requests: write
 
-concurrency: 
+concurrency:
     group: screenshot-test-${{ github.head_ref || github.run_id }}
     cancel-in-progress: true
 
@@ -73,6 +73,8 @@ jobs:
                 run: scripts/deleteOldComments.sh "${{ matrix.color }}-${{ matrix.scheme }}" "Screenshot" ${{github.event.number}}
 
             -   name: Run screenshot tests
+                env:
+                    SHOT_TEST: "true"
                 uses: reactivecircus/android-emulator-runner@6b0df4b0efb23bb0ec63d881db79aefbc976e4b2 # v2.30.1
                 with:
                     api-level: ${{ matrix.api-level }}
