Add UI Components
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,9 @@ include ':appscan'
 //        substitute module('com.github.nextcloud:android-library') using project(':library')
 //    }
 //}
+
+includeBuild('/Users/alperozturk/Desktop/nextcloud/nextcloud_android_library') {
+    dependencySubstitution {
+        substitute module('com.github.nextcloud:android-library') using project(':library')
+    }
+}
