--- a/app/build.gradle
+++ b/app/build.gradle
@@ -459,10 +459,9 @@ spotbugs {
     reportLevel = Confidence.valueOf('MEDIUM')
 }
 
-tasks.withType(SpotBugsTask).configureEach { task ->
+tasks.withType(SpotBugsTask){task ->
     String variantNameCap = task.name.replace("spotbugs", "")
     String variantName = variantNameCap.substring(0, 1).toLowerCase() + variantNameCap.substring(1)
-
     dependsOn "compile${variantNameCap}Sources"
 
     excludeFilter.set(file("${project.rootDir}/spotbugs-filter.xml"))
