gradle has now different class folder
Signed-off-by: tobiasKaminsky <tobias@kaminsky.me>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -466,7 +466,7 @@ tasks.withType(SpotBugsTask).configureEach { task ->
     dependsOn "compile${variantNameCap}Sources"
 
     excludeFilter.set(file("${project.rootDir}/spotbugs-filter.xml"))
-    classes = fileTree("$project.buildDir/intermediates/javac/${variantName}/classes/")
+    classes = fileTree("$project.buildDir/intermediates/javac/${variantName}/compile${variantNameCap}JavaWithJavac/classes/")
     reports {
         xml {
             required = true
