gradle has now different class folder
Signed-off-by: tobiasKaminsky <tobias@kaminsky.me>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -464,8 +464,8 @@ tasks.withType(SpotBugsTask){task ->
     String variantName = variantNameCap.substring(0, 1).toLowerCase() + variantNameCap.substring(1)
     dependsOn "compile${variantNameCap}Sources"
 
-    excludeFilter.set(file("${project.rootDir}/spotbugs-filter.xml"))
     classes = fileTree("$project.buildDir/intermediates/javac/${variantName}/compile${variantNameCap}JavaWithJavac/classes/")
+    excludeFilter = file("${project.rootDir}/scripts/analysis/spotbugs-filter.xml")
     reports {
         xml {
             required = true
