--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 
 # Needed for local libs
-org.gradle.dependency.verification=lenient
+# org.gradle.dependency.verification=lenient
