use local common ui lib
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,10 @@ include ':appscan'
 //        substitute module('com.github.nextcloud:android-library') using project(':library')
 //    }
 //}
+
+
+includeBuild('/Users/alperozturk/Desktop/nextcloud/nextcloud_android_common') {
+    dependencySubstitution {
+        substitute module('com.github.nextcloud.android-common:ui') using project(':ui')
+    }
+}
