--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2018-2024 Nextcloud GmbH and Nextcloud contributors
+# SPDX-License-Identifier: GPL-3.0-or-later
 codecov:
   branch: master
   ci:
