--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2020-2024 Nextcloud GmbH and Nextcloud contributors
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 name: Check
 
 on:
