--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2020-2024 Nextcloud GmbH and Nextcloud contributors
+# SPDX-FileCopyrightText: 2020 Tobias Kaminsky <tobias@kaminsky.me>
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 name: "QA"
 
 on:
