--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@
  * SPDX-FileCopyrightText: 2024 Tobias Kaminsky <tobias@kaminsky.me>
  * SPDX-FileCopyrightText: 2024 Andy Scherzinger <info@andy-scherzinger.de>
  * SPDX-FileCopyrightText: 2022 Álvaro Brey Vilas <alvaro.brey@nextcloud.com>
- * SPDX-License-Identifier: GPL-3.0-or-later
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 import com.github.spotbugs.snom.Confidence
 import com.github.spotbugs.snom.Effort
