--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@
 # see http://EditorConfig.org
 
 # SPDX-FileCopyrightText: 2018-2024 Nextcloud GmbH and Nextcloud contributors
-# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-License-Identifier: AGPL-3.0-or-later
 
 # This is the file in the root of the project.
 # For sub folders you can have other files that override only some settings.
