--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,5 +1,5 @@
 # SPDX-FileCopyrightText: 2022-2024 Nextcloud GmbH and Nextcloud contributors
-# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-License-Identifier: AGPL-3.0-or-later
 
 name: Unit tests
 
@@ -13,7 +13,7 @@ permissions:
     contents: read
     pull-requests: write
 
-concurrency: 
+concurrency:
     group: unit-tests-${{ github.head_ref || github.run_id }}
     cancel-in-progress: true
 
