--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # SPDX-FileCopyrightText: 2016-2024 Nextcloud GmbH and Nextcloud contributors
-# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-License-Identifier: AGPL-3.0-or-later
 # built application files
 *.apk
 *.ap_
