--- a/appscan/build.gradle
+++ b/appscan/build.gradle
@@ -5,7 +5,7 @@
  * SPDX-FileCopyrightText: 2024 Alper Ozturk <alper_ozturk@proton.me>
  * SPDX-FileCopyrightText: 2023 Álvaro Brey Vilas <alvaro.brey@nextcloud.com>
  * SPDX-FileCopyrightText: 2023 Andy Scherzinger <info@andy-scherzinger.de>
- * SPDX-License-Identifier: GPL-3.0-or-later
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 buildscript {
     dependencies {
