--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2023 Nextcloud GmbH and Nextcloud contributors
+# SPDX-FileCopyrightText: 2023 Jarrod Robins
+# SPDX-License-Identifier: CC0-1.0
+#
+# see https://github.com/arturdm/jacoco-android-gradle-plugin/issues/102#issuecomment-1529324972
+
 apply plugin: 'jacoco'
 
 jacoco {
