--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,7 +143,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <intent-filter>
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -151,11 +151,18 @@
 
                 <data android:scheme="http" />
                 <data android:scheme="https" />
-                <data android:host="*" />
+                <data android:host="*"/>
+
                 <data android:pathPattern="/f/..*" />
                 <data android:pathPattern="/..*/f/..*" />
                 <data android:pathPattern="/..*/..*/f/..*" />
                 <data android:pathPattern="/..*/..*/..*/f/..*" />
+
+                <data android:pathPattern="/s/..*" />
+                <data android:pathPattern="/..*/s/..*" />
+                <data android:pathPattern="/..*/..*/s/..*" />
+                <data android:pathPattern="/..*/..*/..*/s/..*" />
+                <data android:pathPattern="/s/.*" />
             </intent-filter>
 
             <meta-data
