--- a/appscan/build.gradle
+++ b/appscan/build.gradle
@@ -3,7 +3,7 @@
  *
  * SPDX-FileCopyrightText: 2016-2024 Nextcloud GmbH and Nextcloud contributors
  * SPDX-FileCopyrightText: 2024 Alper Ozturk <alper_ozturk@proton.me>
- * SPDX-FileCopyrightText: 2023 Álvaro Brey Vilas <alvaro.brey@nextcloud.com>
+ * SPDX-FileCopyrightText: 2023 Álvaro Brey Vilas<alvaro@alvarobrey.com>
  * SPDX-FileCopyrightText: 2023 Andy Scherzinger <info@andy-scherzinger.de>
  * SPDX-License-Identifier: AGPL-3.0-or-later
  */
