Add automatic Per App Languages
Signed-off-by: Arthur-GYT <a.gayot@posteo.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ android {
     namespace 'com.owncloud.android'
     testNamespace "${namespace}.test"
 
+    androidResources {
+        generateLocaleConfig = true
+    }
 
     defaultConfig {
         minSdkVersion 24
