Use restriction manager for app config
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,6 +126,10 @@
         android:usesCleartextTraffic="true"
         tools:ignore="UnusedAttribute"
         tools:replace="android:allowBackup">
+
+        <meta-data android:name="android.content.APP_RESTRICTIONS"
+            android:resource="@xml/app_config" />
+
         <activity
             android:name="com.nextcloud.ui.composeActivity.ComposeActivity"
             android:exported="false" />
