--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,15 @@ buildscript {
 }
 
 plugins {
+    id "org.jetbrains.kotlin.plugin.compose" version "2.0.0"
     id "com.diffplug.spotless" version "6.20.0"
-    id 'com.google.devtools.ksp' version '1.9.23-1.0.20' apply false
+    id "org.jetbrains.kotlin.kapt" version "2.0.0"
+    id 'com.google.devtools.ksp' version '2.0.0-1.0.21' apply false
 }
 
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'checkstyle'
 apply plugin: 'pmd'
@@ -260,10 +261,6 @@ android {
     sourceSets {
         // Adds exported schema location as test app assets.
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
-    }
-
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.13"
     }
 }
 
