--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@
  */
 buildscript {
     ext {
-        androidLibraryVersion = "depocc~notifications-SNAPSHOT"
+        androidLibraryVersion = "cda1b08aa81b74201177f29c2326abee62f32c15"
         androidPluginVersion = '8.4.0'
         androidxMediaVersion = '1.3.1'
         androidxTestVersion = "1.5.0"
