--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@
  */
 buildscript {
     ext {
-        androidLibraryVersion ="depocc/directediting-SNAPSHOT"
+        androidLibraryVersion = "depocc~directediting-SNAPSHOT"
         androidPluginVersion = '8.4.0'
         androidxMediaVersion = '1.3.1'
         androidxTestVersion = "1.5.0"
@@ -24,7 +24,6 @@ buildscript {
         kotlin_version = '2.0.0'
         markwonVersion = "4.6.2"
         prismVersion = "2.0.0"
-        androidLibraryVersion = "master-SNAPSHOT"
         mockitoVersion = "4.11.0"
         mockitoKotlinVersion = "4.1.0"
         mockkVersion = "1.13.10"
