--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@
  */
 buildscript {
     ext {
-        androidLibraryVersion ="67f7bf5eb832b5fa24f06d9b84db0e21d4c8638c"
+        androidLibraryVersion = "depocc~sharing-SNAPSHOT"
         androidPluginVersion = '8.4.0'
         androidxMediaVersion = '1.3.1'
         androidxTestVersion = "1.5.0"
