--- a/appscan/build.gradle
+++ b/appscan/build.gradle
@@ -45,6 +45,6 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "com.github.zynkware:Document-Scanning-Android-SDK:$documentScannerVersion"
 }
