--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,8 @@ include ':appscan'
 //    }
 //}
 
+includeBuild('../android-library') {
+    dependencySubstitution {
+        substitute module('com.github.nextcloud:android-library') using project(':library')
+    }
+}
