--- a/app/build.gradle
+++ b/app/build.gradle
@@ -412,6 +412,7 @@ dependencies {
 
     // upon each update first test: new registration, receive push
     gplayImplementation "com.google.firebase:firebase-messaging:24.0.0"
+    gplayImplementation 'com.google.android.gms:play-services-base:18.5.0'
     gplayImplementation 'com.google.android.play:review-ktx:2.0.1'
 
     implementation 'com.github.nextcloud.android-common:ui:0.17.0'
