--- a/.editorconfig
+++ b/.editorconfig
@@ -44,5 +44,6 @@ indent_size=2
 [*.{kt,kts}]
 # IDE does not follow this Ktlint rule strictly, but the default ordering is pretty good anyway, so let's ditch it
 ktlint_standard_import-ordering = disabled
+ktlint_standard_no-consecutive-comments = disabled
 ij_kotlin_allow_trailing_comma = false
 ij_kotlin_allow_trailing_comma_on_call_site = false
