--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -21,7 +21,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   name: Check if secrets are available
-                run: echo "{ok}=${{ secrets.KS_PASS != '' }}" >> "$GITHUB_OUTPUT"
+                run: echo "ok=${{ secrets.KS_PASS != '' }}" >> "$GITHUB_OUTPUT"
                 id: check-secrets
             -   uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
                 if: ${{ steps.check-secrets.outputs.ok == 'true' }}
