--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@
  */
 buildscript {
     ext {
-        androidLibraryVersion = "2.19.0"
+        androidLibraryVersion = "rc-2.19.1-01"
         androidPluginVersion = '8.3.2'
         androidxMediaVersion = '1.3.1'
         androidxTestVersion = "1.5.0"
