lint checks solved
Signed-off-by: parneet-guraya <gurayaparneet@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -353,7 +353,8 @@
         <service
             android:name="com.nextcloud.client.media.BackgroundPlayerService"
             android:foregroundServiceType="mediaPlayback"
-            android:exported="true">
+            android:exported="true"
+            tools:ignore="ExportedService">
             <intent-filter>
                 <action android:name="androidx.media3.session.MediaSessionService"/>
             </intent-filter>
