Add new data storage location dialogue
Signed-off-by: ZetaTom <70907959+ZetaTom@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -314,6 +314,11 @@
             android:exported="false"
             android:launchMode="singleInstance" />
         <activity
+            android:name=".ui.activity.ChooseStorageLocationActivity"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+            android:exported="false"
+            android:theme="@style/Theme.NoBackground" />
+        <activity
             android:name=".ui.activity.ReceiveExternalFilesActivity"
             android:excludeFromRecents="true"
             android:exported="true"
