Fix build error and colors
Signed-off-by: alperozturk <alper_ozturk@proton.me>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -273,8 +273,8 @@ dependencies {
     implementation("androidx.compose.ui:ui")
     implementation("androidx.compose.ui:ui-graphics")
     implementation("androidx.compose.material3:material3")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.7.2")
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.8'
+    debugImplementation("androidx.compose.ui:ui-tooling")
+    implementation("androidx.compose.ui:ui-tooling-preview")
 
     compileOnly 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     // remove after entire switch to lib v2
