--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -9,12 +9,8 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: [ "master", "main", "stable-*" ]
-  pull_request:
-    branches: [ "master", "main" ]
   schedule:
-    - cron: '24 18 * * 3'
+    - cron: '24 18 * * *'
 
 permissions:
   contents: read
