--- a/app/build.gradle
+++ b/app/build.gradle
@@ -312,6 +312,7 @@ dependencies {
     implementation 'com.caverock:androidsvg:1.4'
     implementation 'androidx.annotation:annotation:1.8.1'
     implementation 'com.vanniktech:emoji-google:0.21.0'
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.8.6")
 
     implementation "com.github.nextcloud-deps.hwsecurity:hwsecurity-fido:$fidoVersion"
     implementation "com.github.nextcloud-deps.hwsecurity:hwsecurity-fido2:$fidoVersion"
