--- a/gradle.properties
+++ b/gradle.properties
@@ -13,12 +13,14 @@ android.nonFinalResIds=false
 
 
 # JVM arguments to optimize heap usage, enable heap dump on out-of-memory errors, and set the file encoding
-org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g
 org.gradle.dependency.verification.console=verbose
-kotlin.daemon.jvmargs=-Xmx4096m
+kotlin.daemon.jvmargs=-Xmx1536m
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 
 # Needed for local libs
 # org.gradle.dependency.verification=lenient
+
+kapt.incremental.apt=true
