--- a/appscan/build.gradle
+++ b/appscan/build.gradle
@@ -19,11 +19,11 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace 'com.nextcloud.appscan'
-    compileSdk 34
 
     defaultConfig {
-        minSdk 21
-        targetSdk 34
+        minSdk 24
+        targetSdk 35
+        compileSdk 35
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -45,6 +45,6 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:1.7.0"
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
     implementation "com.github.zynkware:Document-Scanning-Android-SDK:$documentScannerVersion"
 }
