MANAGE_EXTERNAL_STORAGE not possible for gplay flavor anylonger
Signed-off-by: tobiasKaminsky <tobias@kaminsky.me>

--- a/app/src/gplay/AndroidManifest.xml
+++ b/app/src/gplay/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:name="android.permission.REQUEST_INSTALL_PACKAGES"
         tools:node="remove"/>
 
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:node="remove"
+        tools:ignore="ScopedStorage" />
+
     <application
         android:name=".MainApp"
         android:icon="@mipmap/ic_launcher"
