--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,4 +13,7 @@ RUN cd /tmp/ && mv cmdline-tools/ latest/ && mv latest/ /usr/lib/android-sdk/cmd
 RUN mkdir /usr/lib/android-sdk/licenses/
 RUN chmod -R 755 /usr/lib/android-sdk/
 RUN mkdir -p $HOME/.gradle
-RUN echo "org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError" > $HOME/.gradle/gradle.properties
+RUN echo "org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g" > $HOME/.gradle/gradle.properties
+RUN echo "org.gradle.caching=true" >> $HOME/.gradle/gradle.properties
+RUN echo "org.gradle.parallel=true" >> $HOME/.gradle/gradle.properties
+RUN echo "org.gradle.configureondemand=true" >> $HOME/.gradle/gradle.properties
