update renovate config
Signed-off-by: tobiasKaminsky <tobias@kaminsky.me>

--- a/renovate.json5
+++ b/renovate.json5
@@ -1,12 +1,12 @@
 {
-    $schema: 'https://docs.renovatebot.com/renovate-schema.json',
-    extends: [
-        'config:recommended',
-        ':gitSignOff',
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": [
+        "config:recommended",
+        ":gitSignOff"
     ],
-    timezone: 'Europe/Berlin',
-    labels: [
-        'dependencies',
-        '3. to review',
+    "timezone": "Europe/Berlin",
+    "labels": [
+        "dependencies",
+        "3. to review"
     ],
 }
